<?xml version="1.0"?>
<package format="2">
  <name>LittleDog</name>
  <version>0.0.1</version>
  <description>LittleDog ROS pkg</description>
  <author email="email@email.com">Drake Group</author>
  <maintainer email="email@email.com">Drake Group</maintainer>
  <license>-</license>

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
